Accelerate non-ASCII literal search
UTF-8 literal prefixes often share leading bytes. Scanning only for the
first byte repeatedly returns to scalar verification and leaves Russian
and Chinese searches far behind native RE2.

Fuse front and back comparisons in SWAR and preferred-width vector loops
for eligible searches. Isolate incubating Vector API linkage so apps
without the module continue to use SWAR. Preserve the existing ASCII,
folded-prefix, and short-input paths.